[package]
name = "lc3-arm-demo"
version = "0.1.0"
authors = ["David Haig"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ninjasource/lc3-codec.git"
description = "A demo of the LC3 audio codec runnin on an arm emulator"
readme = "README.md"

[dependencies]
lc3-codec = { path = "../.." }
# lc3-codec = "0.1.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.6.0"

[profile.release]
debug = true
codegen-units = 1 # better optimizations
lto = true # better optimizations
